--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "primeicons": "^7.0.0",
     "primevue": "^3.50.0",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
