--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^3.6.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "oh-vue-icons": "^1.0.0-rc3",
     "pinia": "^2.1.7",
     "primeicons": "^7.0.0",
     "primevue": "^3.50.0",
