--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "html2canvas": "^1.4.1",
@@ -21,11 +22,13 @@
     "oh-vue-icons": "^1.0.0-rc3",
     "pinia": "^2.1.7",
     "primeicons": "^7.0.0",
-    "primevue": "^3.50.0",
+    "primevue": "^3.52.0",
+    "sass": "^1.77.4",
     "sweetalert2": "^11.10.8",
     "vue": "^3.4.21",
     "vue-chartjs": "^5.3.1",
     "vue-router": "^4.3.0",
+    "vuetify": "^3.6.0-beta.0.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
