--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "buffer": "^6.0.3",
     "date-fns": "^3.6.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
@@ -22,6 +23,9 @@
     "pinia": "^2.1.7",
     "primeicons": "^7.0.0",
     "primevue": "^3.50.0",
+    "process": "^0.11.10",
+    "sockjs-client": "^1.5.1",
+    "stompjs": "^2.3.3",
     "sweetalert2": "^11.10.8",
     "vue": "^3.4.21",
     "vue-chartjs": "^5.3.1",
